fix: Fix button gradients not showing

--- a/resources/scss/argon-dashboard/_variables.scss
+++ b/resources/scss/argon-dashboard/_variables.scss
@@ -76,7 +76,7 @@ $theme-colors: (
 // scss-docs-end theme-colors-map
 
 // Gradient colors
-$primary-gradient:            #fb6340 !default;
+$primary-gradient:            #9d090e !default;
 $primary-gradient-state:      #f56036 !default;
 
 $secondary-gradient:          #627594 !default;
